# get

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  sensei-refactoring.md
dummy_app/: test.txt  test2.txt
dummy_app/test/: test2.txt
dummy_app/test/ignoredfolder/: notrack.txt
src/: error.rs  get.rs  lib.rs  main.rs  object.rs  paths.rs  worktree.rs
tests/: tests.rs
